--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="#" alt="">
+            <img src="assets/logo.png" alt="Name-logo">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"> </span>
@@ -32,44 +32,46 @@
         <h1 class="section__title section__title--intro" >
             Hi, I am <strong>Shreya Bakharel</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Full-Stack Developer</p>
-        <img src="#" class="intro__img">
+        <p class="section__subtitle section__subtitle--intro">Full-Stack Java Developer</p>
+        <img src="assets/IMG1.jpg" class="intro__img">
     </section>
 <!-- My Services -->
     <section class="my-services" id="services">
         <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
                 <div class="service">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Full Stack Java Development</h3>
+                    <p> Leverage my expertise in Java, Spring Boot, and front-end technologies like JavaScript, HTML, and CSS to create dynamic and user-friendly web applications. From conceptualization to deployment, I specialize in creating seamless and feature-rich full stack solutions.</p>
                 </div> 
                 <!-- service-->
                 <div class="service">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Responsive Web Design</h3>
+                    <p>With a keen eye for design, I craft visually appealing and responsive websites using HTML, CSS, Bootstrap and JavaScript. I ensure consistent and engaging user experiences across a variety of devices.</p>
                 </div> 
                 <!-- service-->
                 <div class="service">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Technical Problem Solving</h3>
+                    <p>Tackle complex coding challenges head-on. With a knack for debugging and optimizing code, I excel at identifying and resolving technical issues efficiently. I offer comprehensive problem-solving skills that contribute to streamlined and reliable software solutions.</p>
                 </div> 
                 <!-- service-->
             </div> <!--services-->
 
             <a href="#work" class="btn">My Work</a>
+            <a href="/assets/ShreyaResumeJFS.pdf" class="btn"> My Resume</a>
     </section>
 
      <!-- About me -->
      <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about"></p>
+        <p class="section__subtitle section__subtitle--about">Full Stack Developer based in California</p>
 
         <div class="about-me__body">
-            <p></p>
-            <p></p>
+            <p>My coding journey began against the backdrop of a unique background in pharmacy, where attention to detail and problem-solving were paramount. With a passion for coding deeply rooted in my core, I bring to the table a blend of creativity and technical prowess. I thrive on tackling complex challenges head-on.</p>
+            <p>When I'm not crafting innovative software solutions, you'll find me amidst the wonders of nature, hiking through breathtaking trails and discovering hidden gems. I'm an avid traveler, embracing diverse cultures and cuisines as I explore new horizons. I channel my creativity into the culinary arts, finding joy in cooking up delectable dishes that delight the taste buds.</p>
+            <p>My journey in the world of coding mirrors my love for exploration. Just as I venture into uncharted territories during my travels, I approach coding with the same spirit of discovery, constantly pushing boundaries and refining my skills.</p>
         </div>
 
-        <img src="#" alt="" class="about-me__img">
+        <img src="assets/IMG2.jpg" alt="" class="about-me__img">
     </section>
     
      <!-- My Work -->
