--- a/portfolioitem.html
+++ b/portfolioitem.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="#" alt="">
+            <img src="assets/Designer name logo.png" alt="Name-logo">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"> </span>
